<resources>
    <string name="app_name">MadLibs</string>
    <string name="start">Start Game!</string>
    <string name="attack">Attack of the Bunderdoods</string>
    <string name="island">My Island Adventure</string>
    <string name="madlibs">Welcome to MadLibs!</string>
    <string name="noun">Noun</string>
    <string name="adjective">Adjective</string>
    <string name="verb">Verb</string>
    <string name="adverb">Adverb</string>
    <string name="proper">Proper Noun</string>
    <string name="name">Person\'s Name</string>
    <string name="submit">Submit!</string>
    <string name="story1">The captain was shouting out orders over the crashing sounds of the lightning and the waves tearing our ship a part. It was no use. In an instance we were all fighting for our lives in the roiling waters; everything went dark. I woke up to clear, sunny skies all alone. The island that I\'d washed up on had a huge</string>
    <string name="story2">a little further inland. The </string>
    <string name="story3"> air felt felt amazing on my skin. I decided the first thing I needed to do if I wanted to get off this island was find a </string>
    <string name="story4">. I </string>
    <string name="story5">to the bits of wreckage that had washed ashore. I dared not hope for a companion, but I couldn\'t help but look to see if </string>
    <string name="story6"> had survived the wreck. No luck. I started out toward the center of the island to try and find some drinkable water. I felt an </string>
    <string name="story7"> thirst that made me want to </string>
    <string name="story8">.</string>


</resources>
