<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.epicodus.madlibs.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/madlibs"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:id="@+id/textView3"
        android:layout_marginTop="91dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/island"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/island"
        android:textSize="18sp"
        android:textColor="#ffffff"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/bunderdoods"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="191dp"
        app:layout_constraintLeft_toLeftOf="@+id/bunderdoods"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/bunderdoods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attack"
        android:textSize="18sp"
        android:textColor="#ffffff"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/find_madlibs_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start"
        android:textAllCaps="false" />
</RelativeLayout>
